# rip

./: Cargo.toml  README.md
config/: comet.toml  glados.toml  queeg.toml  rhea.toml
src/: config.rs  lib.rs  main.rs  table.rs
src/proto/: command.rs  entry.rs  message.rs  mod.rs  transport.rs
