[package]
name = "rip"
version = "0.1.0"
authors = ["Martin Charles <martincharles07@gmail.com>"]

[dependencies]
nom = "4.1.1"
failure = "0.1.3"
byteorder = "1.2.6"
toml = "0.4.8"
serde = "1.0.80"
serde_derive = "1.0.80"
tokio = { git = "https://github.com/tokio-rs/tokio.git", branch = "eliza/spawn-handle" }
parking_lot = "0.6.4"
